# scheduler

./: .gitignore  README.md  pyproject.toml
app/: day_scheduler.html  day_scheduler_pipeline.py  day_scheduler_query_parser.py  day_scheduler_web.py  financial_analytics.html  financial_analytics_ui.py  google_calendar_sync.py  habit_builder.css  habit_builder.html  habit_builder.js  habit_schedule.py  heartbeat_shell.css  heartbeat_theme.css  heartbeat_theme.js  http_access_rollup.py  local_model_hints.py  mlx_day_scheduler_pipeline.py  mlx_day_scheduler_ui.py  mlx_llm_gateway.py  mlx_scheduler_llm_api.py  response_quality.py  schedule_parse.py  scheduler_llm_gateway.py  scheduler_llm_http_handler.py  scheduler_store.py  scheduler_tokenizer.py  vllm_gateway_routing.py  vllm_openai_client.py
backups/: README.txt  day-scheduler-chat-queue-archived.html  day-scheduler-chat-queue-archived.js
prompts/: airport-timezones.SOURCE.txt  airport-timezones.csv  categories.md  day-scheduler-system.md  expense-display-titles.md  financial-insights-system.md  financial-spend-knowledge.example.md  google-calendar-api-patterns.md  google-calendar-llm-system.md  ledger-title-category.md  spend-mix-chart-labels.md
samples/: airport_timezones.py  bank_statement_csv.py  day_scheduler.html  expense_display_titles.py  financial_ledger_store.py  financial_llm_models.py  financial_pipeline_log.py  financial_spend_knowledge.py  google_calendar_cli.py  google_calendar_client.py  google_calendar_payload.py  habit_builder.html  habit_schedule.py  ledger_llm_progress.py  mlx_chat_cli.py  mlx_day_scheduler_pipeline.py  mlx_day_scheduler_ui.py  mlx_google_calendar_cli.py  mlx_llm_gateway.py  mlx_scheduler_llm_api.py  response_quality.py  schedule_parse.py  scheduler_store.py  spend_categories.py  spend_mix_chart_labels.py
scripts/: free_scheduler_ports.sh  run-llm-gateway-local-models.sh  scheduler-local-stack.sh
tests/: test_airport_timezones.py  test_bank_statement_csv.py  test_day_scheduler_import.py  test_day_scheduler_pipeline_tz.py  test_day_scheduler_query_parser.py  test_expense_display_titles_parse.py  test_financial_analytics_startup.py  test_financial_ledger_store.py  test_financial_llm_models.py  test_financial_spend_knowledge.py  test_google_calendar_cli_clock.py  test_google_calendar_cli_model.py  test_google_calendar_cli_paste.py  test_google_calendar_client.py  test_google_calendar_payload.py  test_google_calendar_sync.py  test_habit_schedule.py  test_ledger_llm_progress.py  test_mlx_google_calendar_cli_model.py  test_mlx_google_calendar_clock.py  test_mlx_google_calendar_paste.py  test_mlx_llm_gateway_preload.py  test_response_quality.py  test_schedule_parse.py  test_schedule_validation.py  test_scheduler_learning.py  test_scheduler_llm_gateway.py  test_scheduler_repair_gate.py  test_scheduler_store.py  test_spend_categories.py  test_vllm_gateway_routing.py
