[project]
name = "scheduler"
version = "0.1.0"
description = "Scheduler project workspace"
readme = false
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.15",
  "pytest>=9",
  "ipython>=9",
  "httpx>=0.28",
]
samples-vllm = [
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "huggingface_hub>=0.27",
]
samples-mlx = [
  "mlx-lm>=0.31",
  "mlx>=0.31",
  "huggingface_hub>=0.27",
  "transformers>=5.8.0",
  "torch>=2.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"samples/vllm_chat_cli.py" = ["E402"]
"samples/mlx_chat_cli.py" = ["E402"]
"samples/mlx_day_scheduler_ui.py" = ["E402"]
"samples/mlx_llm_gateway.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "samples"]
