[project]
name = "scheduler"
version = "0.1.0"
description = "Scheduler project workspace"
readme = false
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.15",
  "pytest>=9",
  "ipython>=9",
  "httpx>=0.28",
]
samples-vllm = [
  "httpx>=0.28",
  "transformers>=4.45",
  "huggingface_hub>=0.27",
]
samples-google-calendar = [
  "httpx>=0.28",
  "transformers>=4.45",
  "google-auth>=2.29",
  "google-auth-oauthlib>=1.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"samples/google_calendar_cli.py" = ["E402", "I001"]
"app/day_scheduler_web.py" = ["E402"]
"app/scheduler_llm_http_handler.py" = ["E402"]
"app/scheduler_llm_gateway.py" = ["E402"]
"app/financial_analytics_ui.py" = ["E402"]
"app/vllm_openai_client.py" = ["E402"]
"app/vllm_gateway_routing.py" = ["E402"]
"app/scheduler_tokenizer.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "app", "samples"]
